# tracker

./: Cargo.toml  README.md  build.sh
docs/: configuration.md  keymap.md
locales/: de.yml  en.yml  es.yml  fr.yml  ja.yml  ru.yml  zh.yml
src/: app.rs  config.rs  group.rs  main.rs  shared_state.rs  utils.rs  widgets.rs
src/widgets/: keymap.rs  predicted_passes.rs  satellite_groups.rs  timeline.rs  world_map.rs
