[package]
name = "tracker"
version = "0.1.20"
authors = ["ShenMian <sms_school@outlook.com>"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
sgp4 = "2.3"
reverse_geocoder = "4.1" # Convert latitude and longitude to country code
isocountry = "0.3"       # Convert country code to country name
arboard = "3"            # Access system clipboard
hifitime = "4"

# TUI
ratatui = { version = "0.30", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"

# Utilities
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "1"
serde_json = "1"
sys-locale = "0.3"
rust-i18n = "4"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = [
    "http2",
    "query",
    "json",
    "native-tls",
] }

[profile.dev]
# Optimized debug build for better performance during development
opt-level = 1        # Basic optimizations (faster than opt-level=0)
debug = true         # Keep debug symbols
overflow-checks = true
lto = false          # Link-time optimization off for faster compiles
panic = "unwind"     # Better panic messages
incremental = true   # Faster rebuilds

[profile.dev.package."*"]
# Don't optimize dependencies in debug (faster compiles)
opt-level = 0

[profile.release]
opt-level = 3        # Maximum optimizations
debug = false        # No debug symbols
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Remove symbols
